# hermes-core

./: Cargo.toml
src/: .env  Cargo.toml  lib.rs  main.rs  runtime.rs
src/agents/: basic.rs  memory.rs  mod.rs  types.rs
src/arbitrage/: mod.rs  opportunity.rs  strategies.rs
src/core/: agent_scores.rs  flashbots_engine.rs  gas_optimizer.rs  mod.rs  reputation.rs  scaling_trigger.rs  types.rs  vault_growth_scaler.rs  vault_router.rs  vault_state.rs
src/core/agents/: executor_agent.rs  liquidation_agent.rs  mev_sniper_agent.rs  mod.rs  oracle_arb_agent.rs  passive_alpha.rs  sandwich_detector.rs  sentinel_agent.rs  sniper_agent.rs  swarm_agent.rs
src/core/execution/: dex_optimizer.rs  execution_simulator.rs  signal_combiner.rs  vault_arb.rs
src/core/flashloan/: flashloan_aave.rs  flashloan_router.rs  profit_forwarder.rs
src/core/governance/: strategy_nft.rs
src/core/intelligence/: alpha_monitor.rs  confidence_tracker.rs  meta_strategy.rs  opportunity_throttler.rs  outcome_attribution.rs  signal_predictor.rs
src/core/monitoring/: alerts.rs  dashboard_feed.rs  telemetry.rs
src/core/multichain/: arbitrum.rs  chain_adapter.rs  l2_signals.rs  optimism.rs
src/core/opsec/: mod.rs  (+4 more)
src/execution/: bundle.rs  flashbots.rs  simulator.rs
src/infra/: clock.rs  config.rs  logger.rs  mod.rs
src/learning/: evolution.rs  mod.rs  reinforcement.rs
src/swarm/: mod.rs  oracle.rs
test/: agent_tests.rs  full_system_tests.rs  score_tests.rs  signal_buffer_tests.rs  signal_loop_tests.rs  swarm_tests.rs  test_dex_optimizer.rs  test_helpers.rs  vault_router_tests.rs
(+27 files in other folders)
