[package]
name = "hermes-core"
version = "0.1.0"
edition = "2021"
authors = ["Hermes Core Swarm AI"]
description = "Modular, self-learning MEV swarm for arbitrage and liquidation strategies."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
chrono = "0.4"
uuid = { version = "1.4", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
parking_lot = "0.12"

# For backtesting, simulation, or custom math
statrs = "0.16"
rand = "0.8"

# For future modular runtime, L2 compatibility, Flashbots bundles
async-trait = "0.1"
futures = "0.3"
hex = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
